@@ -5,23 +5,20 @@
 use strict;
 BEGIN {
 	$|  = 1;
-	# $^W = 1;
+	$^W = 1;
 }
 
-use Test::More tests => 5;
-# use Test::NoWarnings;
+use Test::More tests => 6;
+use Test::NoWarnings;
 use t::lib::Test;
 
 SCOPE: {
-	my $dbh = connect_ok( RaiseError => 1 );
+	my $dbh = connect_ok( RaiseError => 1, PrintWarn => 0 );
+	ok( ! $dbh->{PrintWarn}, '->{PrintWarn} is false' );
 	ok( $dbh->do("CREATE TABLE f (f1, f2, f3)"), 'CREATE TABLE ok' );
 	ok( $dbh->begin_work, '->begin_work' );
 	ok(
 		$dbh->do("INSERT INTO f VALUES (?, ?, ?)", {}, 'foo', 'bar', 1),
 		'INSERT ok',
 	);
-
-	1;
 }
-
-1;
