@@ -15,6 +15,8 @@ Changes for Perl extension DBD-SQLite.
       CHORNY had inadvertantly applied the fix in the name of DBI cleaning)
     - Starting to use Test::NoWarnings in the test scripts (ADAMK)
     - Added link to MailingList resource (ADAMK)
+    - Squelch warnings inless PrintWarn is set in line with guidance from
+      the DBI documentation (ADAMK)
 
 1.19_08 Sat  4 Apr 2009
     - Bumped minimum DBI dependency to 1.43 so last_insert_id is supported
